# openapi-generator

./: Cargo.toml  justfile
src/: codegen.rs  dereferencer.rs  helpers.rs  lib.rs  main.rs  openapi_generator.rs
templates/rust/partials/: operation_examples.hbs  operation_types.hbs  schema.hbs
templates/rust/template/: Cargo.toml  lib.rs
templates/rust/template/client/: mod.rs
templates/rust/template/examples/: main.rs
templates/rust/template/models/: mod.rs
templates/rust/template/security/: mod.rs
templates/rust/template/server/: mod.rs
