# Generated with openapi_generator {{openapi_generator_version}}

[package]
name = "{{package_name}}"
version = "{{version}}"
edition = "2021"

[lib]
name = "{{package_name}}"
path = "lib.rs"

[[example]]
name = "example"
path = "examples/main.rs"

[dependencies]
actix-http = { version = "=3.0.0-beta.5" }
actix-multipart = { version = "0.4.0-beta.4" }
actix-rt = "2.2.0"
actix-service = { version = "=2.0.0-beta.5" }
actix-web = { version = "=4.0.0-beta.5" }
async-std = { version = "1.7.0" }
async-trait = { version = "0.1.41" }
displaydoc = { version = "0.2.1" }
futures = { version = "0.3.7" }
log = { version = "0.4.11" }
maplit = "1.0.2"
once_cell = "1.4.1"
reqwest = { version = "0.11.2", features = [
    "json",
    "multipart",
] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
serde_urlencoded = { version = "0.7.0" }
thiserror = { version = "1.0.22" }
url = { version = "2.1.1" }

[dev-dependencies]
femme = "2.1.1"
