# Generated with openapi_generator {{openapi_generator_version}}

[package]
name = "{{package_name}}"
version = "{{version}}"
edition = "2021"

[lib]
name = "{{package_name}}"
path = "lib.rs"

[[example]]
name = "example"
path = "examples/main.rs"

[dependencies]
actix-http = { version = "=3.0.0-beta.5", optional = true }
actix-multipart = { version = "0.4.0-beta.4", optional = true }
actix-rt = { version = "2.2.0", optional = true }
actix-service = { version = "=2.0.0-beta.5", optional = true }
actix-web = { version = "=4.0.0-beta.5" }
async-std = { version = "1.7.0", optional = true }
async-trait = { version = "0.1.41", optional = true }
displaydoc = { version = "0.2.1", optional = true }
futures = { version = "0.3.7" }
log = { version = "0.4.11", optional = true }
maplit = { version = "1.0.2", optional = true }
once_cell = { version = "1.4.1", optional = true }
reqwest = { version = "0.11.2", features = [
    "json",
    "multipart",
], optional = true }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
serde_urlencoded = { version = "0.7.0", optional = true }
thiserror = { version = "1.0.22", optional = true }
url = { version = "2.1.1", optional = true }

[dev-dependencies]
femme = "2.1.1"

[features]
{{~#each paths as |_ specName|}}
{{snakecase specName "server"}} = [
    "actix-service",
    "actix-http",
    "async-trait",
    "actix-multipart",
    "once_cell",
    "maplit"]
{{snakecase specName "client"}} = [
    "reqwest",
    "async-std",
    "url",
    "thiserror",
    "displaydoc",
    "serde_urlencoded",
    "log"]
{{~/each}}